# appartment-price-visualization

./: README.md  pyproject.toml
apartmentscraper/: appartment_data.jsonl  scrapy.cfg
apartmentscraper/apartmentscraper/: items.py  middlewares.py  pipelines.py  settings.py
apartmentscraper/apartmentscraper/spiders/: immoweltspider.py
rent_price_visualization/: scrapy.cfg
rent_price_visualization/rent_price_visualization/: items.py  middlewares.py  pipelines.py  settings.py
rent_price_visualization/rent_price_visualization/spiders/: immowelt.py
